...
    <!-- General -->
    <string name="app_name">Counter</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>

    <!-- Menu -->
    <string name="drawer_open">Open navigation</string>
    <string name="drawer_close">Close navigation</string>
    <string name="menu_add">Add counter</string>
    <string name="menu_reset">Reset counter</string>
    <string name="menu_edit">Edit counter</string>
    <string name="menu_delete">Delete counter</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_info">About</string>

    <!-- Dialogs -->
    <string name="dialog_add_title">Add a new counter</string>
    <string name="dialog_edit_title">Edit this counter</string>
    <string name="dialog_delete_title">Do you really want to delete this counter?</string>
    <string name="dialog_reset_title">Do you really want reset this counter?</string>
    <string name="dialog_edit_name">Title:</string>
    <string name="dialog_edit_value">Value:</string>
    <string name="dialog_button_add">Add</string>
    <string name="dialog_button_apply">Apply</string>
    <string name="dialog_button_reset">Reset</string>
    <string name="dialog_button_delete">Delete</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_close">Close</string>

    <!-- Settings -->
...
    <!-- Toasts -->
    <string name="toast_wipe_success">All counters have been removed.</string>
    <string name="toast_remove_success">Counter \"%s\" has been removed.</string>
    <string name="toast_no_name_message">Name is required!</string>

    <!-- Other stuff -->
    <string name="default_counter_name">New counter</string>
    <string name="unknown">Unknown</string>
    <string name="counterLabel">counterLabel</string>
    <string name="frame_layout1">frame_layout1</string>
    <string name="incrementbutton">incrementButton</string>

</resources>

